--- a/gramApp/static/gram/main.css
+++ b/gramApp/static/gram/main.css
@@ -77,6 +77,6 @@ body{
 .user-profile{
     width: 22px;
     border-radius: 50%;
-    background-image: url(img/profile-pic.png);
+    background-image: url(../assets/pic.jpg);
     background-size: cover;
 }
