navbar bug fixed

--- a/gramApp/templates/app/base.html
+++ b/gramApp/templates/app/base.html
@@ -37,7 +37,35 @@
                 </div>
             </div>
     </div>
-    <main role="main" class="container">
+    <!--STORIES -->
+    <!-- <section class="main">
+        <div class="wrapper">
+            <div clbass="left-col">
+                <div class="status-wrapper">
+                    <div class="status-card">
+                        <div class="profile-pic"><img src="img/cover 1.png" alt=""></div>
+                        <p class="username">user_name_1</p>
+                    </div>
+                    <div class="status-card">
+                        <div class="profile-pic"><img src="img/cover 2.png" alt=""></div>
+                        <p class="username">user_name_2</p>
+                    </div>
+                    <div class="status-card">
+                        <div class="profile-pic"><img src="img/cover 3.png" alt=""></div>
+                        <p class="username">user_name_3</p>
+                    </div>
+            </div>
+        </div>
+    </section> -->
+
+   <!-- Posts -->
+   <section class="main">
+    <div class="wrapper">
+        <div class="left-col">
+            POSTS
+            </div>
+            </div>
+            </section
           {% if messages %}
           {% for message in messages %}
             <div class="alert alert-{{ message.tags }}">
