--- a/gramApp/templates/app/home.html
+++ b/gramApp/templates/app/home.html
@@ -19,42 +19,73 @@
                 <p class="username">user_name_3</p>
             </div>
     </div> -->
-    <div class="row">
-    <!--SIDE-BAR-->
-    <div class="col-md-4">
-    </div>
-
-    <!--main content-->
-    <div class="left-col">
-        <div class="col-md-8 mt-4 pt-4">
-            <div class="post">
-            <div class="info">
-                <div class="user">
-                    <div class="profile-pic"><img src="{% static 'assets/pic.jpg' %}" alt=""></div>
+<div class="row">
+<section class="main">
+<div class="wrapper">
+ <!--main content-->
+ <div class="left-col">
+    <!-- <div class="col mt-4 pt-4" style="width:550px"> -->
+        <div class="post">
+        <div class="info">
+            <div class="user">
+                <div class="profile-pic"><img src="{% static 'assets/pic.jpg' %}" alt=""></div>
+                <p class="username">modern_web_channel</p>
+            </div>
+            <img src="{% static 'assets/option.PNG' %}" class="options" alt="">
+        </div>
+        <img src="{% static 'assets/cover 8.png' %}" class="post-image" alt="">
+        <div class="post-content">
+            <div class="reaction-wrapper">
+                <img src="{% static 'assets/like.PNG' %}" class="icon" alt="">
+                <img src="{% static 'assets/comment.PNG' %}" class="icon" alt="">
+                <img src="{% static 'assets/send.PNG' %}" class="icon" alt="">
+                <img src="{% static 'assets/save.PNG' %}" class="save icon" alt="">
+            </div>
+            <p class="likes">1,012 likes</p>
+            <p class="description"><span>username </span> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur tenetur veritatis placeat, molestiae impedit aut provident eum quo natus molestias?</p>
+            <p class="post-time">2 minutes ago</p>
+        </div>
+        <div class="comment-wrapper">
+            <img src="{% static 'assets/pic.jpg' %}" class="icon" alt="">
+            <input type="text" class="comment-box" placeholder="Add a comment">
+            <button class="comment-btn">post</button>
+        </div>
+    <!-- </div> -->
+</div>
+</div>
+    <!--SIDEBAR-->
+    <div class="right-col">
+    <div class="col mt-4 pt-4">
+            <div class="profile-card">
+                <div class="profile-pic">
+                    <img src="{% static 'assets/pic.jpg' %}" alt="">
+                </div>
+                <div>
                     <p class="username">modern_web_channel</p>
+                    <p class="sub-text">kunaal kumar</p>
                 </div>
-                <img src="{% static 'assets/option.PNG' %}" class="options" alt="">
+                <button class="action-btn">switch</button>
             </div>
-            <img src="{% static 'assets/cover 8.png' %}" class="post-image" alt="">
-            <div class="post-content">
-                <div class="reaction-wrapper">
-                    <img src="{% static 'assets/like.PNG' %}" class="icon" alt="">
-                    <img src="{% static 'assets/comment.PNG' %}" class="icon" alt="">
-                    <img src="{% static 'assets/send.PNG' %}" class="icon" alt="">
-                    <img src="{% static 'assets/save.PNG' %}" class="save icon" alt="">
+            <p class="suggestion-text">Suggestions for you</p>
+            <div class="profile-card">
+                <div class="profile-pic">
+                    <img src="{% static 'assets/cover 13.png' %}" alt="">
                 </div>
-                <p class="likes">1,012 likes</p>
-                <p class="description"><span>username </span> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur tenetur veritatis placeat, molestiae impedit aut provident eum quo natus molestias?</p>
-                <p class="post-time">2 minutes ago</p>
+                <div>
+                    <p class="username">User Name</p>
+                    <p class="sub-text">followed by user</p>
+                </div>
+                <button class="action-btn">follow</button>
             </div>
-            <div class="comment-wrapper">
-                <img src="{% static 'assets/pic.jpg' %}" class="icon" alt="">
-                <input type="text" class="comment-box" placeholder="Add a comment">
-                <button class="comment-btn">post</button>
-            </div>
+            
+            
+           
         </div>
     </div>
-    </div>
+
+   
+</div>
+</section>
 </div>
 </div>
 
