--- a/gramApp/templates/app/home.html
+++ b/gramApp/templates/app/home.html
@@ -23,17 +23,20 @@
 <section class="main">
 <div class="wrapper">
  <!--main content-->
+ {% for image in images %}
  <div class="left-col">
-    <!-- <div class="col mt-4 pt-4" style="width:550px"> -->
         <div class="post">
         <div class="info">
             <div class="user">
                 <div class="profile-pic"><img src="{% static 'assets/pic.jpg' %}" alt=""></div>
                 <p class="username">modern_web_channel</p>
             </div>
+            <!-- <img src="{{image.image.url}}" class="img-responsive" alt="..."  style="width:100%; height:100%;" > -->
             <img src="{% static 'assets/option.PNG' %}" class="options" alt="">
         </div>
-        <img src="{% static 'assets/cover 8.png' %}" class="post-image" alt="">
+        
+        <!-- <img src="{% static 'assets/cover 8.png' %}" class="post-image" alt=""> -->
+        <img src="{{image.image.url}}" class="post-image" alt="">
         <div class="post-content">
             <div class="reaction-wrapper">
                 <img src="{% static 'assets/like.PNG' %}" class="icon" alt="">
@@ -53,6 +56,8 @@
     <!-- </div> -->
 </div>
 </div>
+{% endfor %}
+
     <!--SIDEBAR-->
     <div class="right-col">
     <div class="col mt-4 pt-4">
