--- a/gramApp/templates/app/home.html
+++ b/gramApp/templates/app/home.html
@@ -46,8 +46,8 @@
                 <img src="{% static 'assets/save.PNG' %}" class="save icon" alt="">
             </div>
             <p class="likes">1,012 likes</p>
-            <p class="description"><span>username </span> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur tenetur veritatis placeat, molestiae impedit aut provident eum quo natus molestias?</p>
-            <p class="post-time">2 minutes ago</p>
+            <p class="description"><span>{{image.author}} </span> {{image.caption}}</p>
+            <p class="post-time">{{image.uploadDate|timesince}}</p>
         </div>
         <div class="comment-wrapper">
             <img src="{% static 'assets/pic.jpg' %}" class="icon" alt="">
