updating image model to return caption

--- a/gramApp/templates/app/home.html
+++ b/gramApp/templates/app/home.html
@@ -68,7 +68,7 @@
                     <img src="{% static 'assets/pic.jpg' %}" alt="">
                 </div>
                 <div>
-                    <p class="username">modern_web_channel</p>
+                    <p class="username">{{user.username}}</p>
                     <p class="sub-text">kunaal kumar</p>
                 </div>
                 <button class="action-btn">switch</button>
