--- a/gramApp/templates/app/home.html
+++ b/gramApp/templates/app/home.html
@@ -84,6 +84,22 @@
                 </div>
                 <button class="action-btn">follow</button>
             </div>
+            <div>
+            </br>
+
+                <small class="text-muted">
+                    <a href="https://about.instagram.com/" style="text-decoration: none; color: rgba(0, 0, 0, 0.496);">About </a>
+                    <a href="#" style="text-decoration: none; color: rgba(0, 0, 0, 0.496);">Help</a>
+                    <a href="#" style="text-decoration: none; color: rgba(0, 0, 0, 0.496);">Press</a>
+                    <a href="#" style="text-decoration: none; color: rgba(0, 0, 0, 0.496);">API</a>
+                    <a href="#" style="text-decoration: none; color: rgba(0, 0, 0, 0.496);">Jobs</a>
+                    <a href="#" style="text-decoration: none; color: rgba(0, 0, 0, 0.496);">Privacy</a>
+                    <a href="#" style="text-decoration: none; color: rgba(0, 0, 0, 0.496);">Terms</a>
+                    <a href="#" style="text-decoration: none; color: rgba(0, 0, 0, 0.496);">Locations</a>
+                    </small>
+                </br>
+                <small class="text-muted"> © 2022 INSTAGRAM FROM META </small>
+            </div>
             
             
            
