--- a/gramApp/templates/app/home.html
+++ b/gramApp/templates/app/home.html
@@ -15,7 +15,7 @@
 
   <div id="wrapper">
         <div class="container">
-            <!-- <div class="img"></div> -->
+            <div class="img"></div>
             <div class="form">
                 <form method="POST">
                     {% csrf_token %}
