--- a/gramApp/templates/app/feed.html
+++ b/gramApp/templates/app/feed.html
@@ -69,7 +69,7 @@
                 </div>
                 <div>
                     <p class="username">{{user.username}}</p>
-                    <p class="sub-text">kunaal kumar</p>
+                    <p class="sub-text">{{user.firstname}} {{user.lastname}}</p>
                 </div>
                 <button class="action-btn">switch</button>
             </div>
