--- a/gramApp/templates/app/base.html
+++ b/gramApp/templates/app/base.html
@@ -28,14 +28,14 @@
               <img src="{% static 'assets/logo.PNG' %}" class="brand-img" alt="" href="{% url 'feed' %}">
                 <input type="text" class="search-box" placeholder="search">
                 <div class="nav-items">
-                    <a href="{% url 'feed' %}">
+                    <a href="{% url 'feed' %}" style="text-decoration:none;">
                         <img src="{% static 'assets/home.PNG' %}" class="icon" alt="">
                     </a>
                     <img src="{% static 'assets/messenger.PNG' %}" class="icon" alt="">
                     <img src="{% static 'assets/add.PNG' %}" class="icon" alt="">
                     <img src="{% static 'assets/explore.PNG' %}" class="icon" alt="">
                     <img src="{% static 'assets/like.PNG' %}" class="icon" alt="">
-                    <a href="{% url 'profile' %}">
+                    <a href="{% url 'profile' %}" style="text-decoration: none">
                         <div class="icon user-profile"></div>
                     </a>
                 </div>
