--- a/gramApp/templates/app/feed.html
+++ b/gramApp/templates/app/feed.html
@@ -29,7 +29,7 @@
         <div class="post">
         <div class="info">
             <div class="user">
-                <div class="profile-pic"><img src="{% static 'assets/pic.jpg' %}" alt=""></div>
+                <div class="profile-pic"><img src="{{ user.profile.image.url  }}" alt=""></div>
                 <p class="username">{{image.author}}</p>
             </div>
             <!-- <img src="{{image.image.url}}" class="img-responsive" alt="..."  style="width:100%; height:100%;" > -->
@@ -50,7 +50,7 @@
             <p class="post-time">{{image.uploadDate|timesince}}</p>
         </div>
         <div class="comment-wrapper">
-            <img src="{% static 'assets/pic.jpg' %}" class="icon" alt="">
+            <img src="{{ user.profile.image.url  }}" class="icon" alt="">
             <input type="text" class="comment-box" placeholder="Add a comment">
             <button class="comment-btn">post</button>
         </div>
@@ -65,7 +65,7 @@
     <div class="col mt-4 pt-4">
             <div class="profile-card">
                 <div class="profile-pic">
-                    <img src="{% static 'assets/pic.jpg' %}" alt="">
+                    <img src="{{ user.profile.image.url  }}" alt="">
                 </div>
                 <div>
                     <p class="username">{{user.username}}</p>
