--- a/gramApp/templates/app/base.html
+++ b/gramApp/templates/app/base.html
@@ -36,7 +36,9 @@
                     <img src="{% static 'assets/explore.PNG' %}" class="icon" alt="">
                     <img src="{% static 'assets/like.PNG' %}" class="icon" alt="">
                     <a href="{% url 'profile' %}" style="text-decoration: none">
-                        <div class="icon user-profile"></div>
+                        <div class="icon user-profile">
+                            <img src="{{ user.profile.image.url  }}" class="">
+                        </div>
                     </a>
                 </div>
             </div>
