adding a url for the profile editing page,  updating the 'edit profile' button

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -18,7 +18,11 @@
 
             <h1 class="profile-user-name">{{user.username}}</h1>
 
-            <button class="btn profile-edit-btn">Edit Profile</button>
+            <button class="btn profile-edit-btn" href="{% url 'editProfile' %}">
+                <a href="{% url 'editProfile' %}" style="text-decoration: none;color: black;">
+                    Edit Profile
+                </a>
+            </button>
 
             <button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
 
