--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -40,7 +40,7 @@
 
         <div class="profile-bio">
 
-            <p><span class="profile-real-name">Full Name</br></span> {{ user.profile.bio }}</p>
+            <p><span class="profile-real-name">{{ user.profile.first_name }} {{ user.profile.last_name }}</br></span> {{ user.profile.bio }}</p>
 
         </div>
 
