--- a/gramApp/templates/app/feed.html
+++ b/gramApp/templates/app/feed.html
@@ -29,7 +29,7 @@
         <div class="post">
         <div class="info">
             <div class="user">
-                <div class="profile-pic"><img src="{{ user.profile.image.url  }}" alt=""></div>
+                <div class="profile-pic"><img src="{{ image.author.profile.image.url  }}" alt=""></div>
                 <p class="username">{{image.author}}</p>
             </div>
             <!-- <img src="{{image.image.url}}" class="img-responsive" alt="..."  style="width:100%; height:100%;" > -->
