updating post detail view

--- a/gramApp/templates/app/ImgDetail.html
+++ b/gramApp/templates/app/ImgDetail.html
@@ -13,6 +13,7 @@
                         <div class="profile-pic"><img src="{{ image.author.profile.image.url  }}" alt=""></div>
                         <p class="username">{{image.author}}</p>
                     </div>
+                    <!-- <img src="{{image.image.url}}" class="img-responsive" alt="..."  style="width:100%; height:100%;" > -->
                     <img src="{% static 'assets/option.PNG' %}" class="options" alt="">
                 </div>
                 
