--- a/gramApp/templates/app/newImage.html
+++ b/gramApp/templates/app/newImage.html
@@ -6,7 +6,8 @@
 <div class="cont pt-5"></div>
 <div class="container-fluid mt-5 pt-5">
 <div class="container mb-5 pt-4" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
-
+<form method="POST" enctype="multipart/form-data" action="">
+        {% csrf_token %}
     <div class="row pt-5">
         <div class="col-2"></div>
         <div class="col-8 ">
@@ -19,6 +20,7 @@
     <div class="btnWrapper pb-5 pt-4">
         <button class="form-btn center" type="submit" style="width: 10%; height:30px; border-radius: 35px;">POST</button>
     </div>
+</form>
 </div>
 
 </div>
