--- a/gramApp/templates/app/feedd.html
+++ b/gramApp/templates/app/feedd.html
@@ -53,7 +53,8 @@
         </div>
         <div class="comment-wrapper">
             <img src="{{ user.profile.image.url  }}" class="icon" alt="">
-            <form method="POST" >
+            <form method="POST" class="comment-box">
+
                 {% csrf_token %}
                 {{ form|crispy }}
             </form>
