--- a/gramApp/static/gram/main.css
+++ b/gramApp/static/gram/main.css
@@ -247,15 +247,15 @@ body{
 }
 
 .comment-wrapper .icon{
-    height: 30px;
+    height: 20px;
 }
 
 .comment-box{
     width: 80%;
-    height: 100%;
+    height: 50% !important;
     border: none;
     outline: none;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .comment-btn,
