--- a/gramApp/templates/app/ImgDetail.html
+++ b/gramApp/templates/app/ImgDetail.html
@@ -6,7 +6,7 @@
 <div class="cont pt-5"></div>
 <div class="container-fluid mt-5 pt-5">
     <div class="container mb-5 pt-4" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
-        <div class="row pt-5">
+<div class="row pt-5">
         <div class="col-8">
             <div class="post">
                 <div class="info">
@@ -19,22 +19,30 @@
                 </div>
                 
                 <img src="{{image.image.url}}" class="post-image" alt="">
-                <div class="post-content">
-                    <div class="reaction-wrapper">
-                        <img src="{% static 'assets/like.PNG' %}" class="icon" alt="">
-                        <img src="{% static 'assets/comment.PNG' %}" class="icon" alt="">
-                        <img src="{% static 'assets/send.PNG' %}" class="icon" alt="">
-                        <img src="{% static 'assets/save.PNG' %}" class="save icon" alt="">
-                    </div>
-                    <p class="likes">1,012 likes</p>
-                    <p class="description"><span>{{image.author}} </span> {{image.caption}}</p>
-                    <p class="post-time">{{image.uploadDate|timesince}}</p>
-                </div>
-               
         </div>
     </div>
     <!--COMMENTS-->
-    <div class="col-4">
+    <div class="col-4 pt-5">
+        <div>
+            {% for comment in comments %}
+            <div class=" mt-3 mb-5">
+                    <p>
+                        <strong>{{ comment.author }}</strong> <text>{{ comment.comment }}</text></br><small class="text-muted">posted{{ comment.createDate|timesince }} ago </small>
+                    </p>
+            </div>
+            {% endfor %}
+        </div>
+    <div class="pt-5">
+        <div class="reaction-wrapper">
+            <img src="{% static 'assets/like.PNG' %}" class="icon" alt="">
+            <img src="{% static 'assets/comment.PNG' %}" class="icon" alt="">
+            <img src="{% static 'assets/send.PNG' %}" class="icon" alt="">
+            <img src="{% static 'assets/save.PNG' %}" class="save icon" alt="">
+        </div>
+        <p class="likes">1,012 likes</p>
+        <p class="description"><span>{{image.author}} </span> {{image.caption}}</p>
+        <p class="post-time">{{image.uploadDate|timesince}} ago</p>
+    </div>
         <form method="POST">
             {% csrf_token %}
             <div class="comment-wrapper">
