--- a/gramApp/templates/app/ImgDetail.html
+++ b/gramApp/templates/app/ImgDetail.html
@@ -6,7 +6,7 @@
 <div class="cont pt-5"></div>
 <div class="container-fluid mt-5 pt-5">
     <div class="container mb-5 pt-4" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
-<div class="row pt-5">
+<div class="row pt-2">
         <div class="col-8">
             <div class="post">
                 <div class="info">
@@ -22,7 +22,9 @@
         </div>
     </div>
     <!--COMMENTS-->
-    <div class="col-4 pt-5">
+    <div class="col-4 pt-5 mb-5">
+      <strong style="font-size: 16px;"> {{image.author}} </strong>
+
         <div>
             {% for comment in comments %}
             <div class=" mt-3 mb-5">
@@ -42,7 +44,7 @@
         <p class="likes">1,012 likes</p>
         <p class="description"><span>{{image.author}} </span> {{image.caption}}</p>
         <p class="post-time">{{image.uploadDate|timesince}} ago</p>
-    </div>
+        </div>
         <form method="POST">
             {% csrf_token %}
             <div class="comment-wrapper">
