--- a/gramApp/templates/app/ImgDetail.html
+++ b/gramApp/templates/app/ImgDetail.html
@@ -29,7 +29,7 @@
             {% for comment in comments %}
             <div class=" mt-3 mb-5">
                     <p>
-                        <strong>{{ comment.author }}</strong> <text>{{ comment.comment }}</text></br><small class="text-muted">posted{{ comment.createDate|timesince }} ago </small>
+                        <strong><a href="{% url 'profile' user.profile.pk %}" style="text-decoration: none; color: #000;">{{ comment.author }} </a></strong> <text>{{ comment.comment }}</text></br><small class="text-muted">{{ comment.createDate|timesince }} ago </small>
                     </p>
             </div>
             {% endfor %}
