--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -59,68 +59,33 @@
 <main>
 
 <div class="container">
-
-    <div class="gallery">
-
-        <div class="gallery-item" tabindex="0">
-
-            <img src="https://images.unsplash.com/photo-1511765224389-37f0e77cf0eb?w=500&h=500&fit=crop" class="gallery-image" alt="">
-
-            <div class="gallery-item-info">
-
-                <ul>
-                    <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden="true"></i> 56</li>
-                    <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden="true"></i> 2</li>
-                </ul>
-
+<div class="row">
+    <div class="col">
+        <div class="gallery">
+            {% for image in images %}
+                <div class="gallery-item" tabindex="0">
+                    <a href="{% url 'postDetail' image.id %}" style="color:white; text-decoration: none;">
+                        <img src="{{image.image.url}}" class="gallery-image" alt="">
+                    <div class="gallery-item-type">
+                        <span class="visually-hidden">Gallery</span><i class="fas fa-clone" aria-hidden="true"></i>
+                    </div>
+                    <div class="gallery-item-info">
+                        <ul>
+                            <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden="true"></i> 42</li>
+                            <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden="true"></i>{{count}}</li>
+                        </ul>
+                    </div>
+                </a>
+                </div>
+                {% endfor %}
             </div>
-
-        </div>
-
-        <div class="gallery-item" tabindex="0">
-
-            <img src="https://images.unsplash.com/photo-1497445462247-4330a224fdb1?w=500&h=500&fit=crop" class="gallery-image" alt="">
-
-            <div class="gallery-item-info">
-
-                <ul>
-                    <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden="true"></i> 89</li>
-                    <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden="true"></i> 5</li>
-                </ul>
-
-            </div>
-
-        </div>
-
-        <div class="gallery-item" tabindex="0">
-
-            <img src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=500&h=500&fit=crop" class="gallery-image" alt="">
-
-            <div class="gallery-item-type">
-
-                <span class="visually-hidden">Gallery</span><i class="fas fa-clone" aria-hidden="true"></i>
-
-            </div>
-
-            <div class="gallery-item-info">
-
-                <ul>
-                    <li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fas fa-heart" aria-hidden="true"></i> 42</li>
-                    <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden="true"></i> 1</li>
-                </ul>
-
-            </div>
-
-        </div>
-
-        </div>
-
+    </div>
+</div>
     </div>
     <!-- End of gallery -->
 
     <!-- <div class="loader"></div> -->
 
-</div>
 <!-- End of container -->
 
 </main>
