--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -32,7 +32,7 @@
         </br>
         </br>
             <ul>
-                <li><span class="profile-stat-count">3</span> posts</li>
+                <li><span class="profile-stat-count">{{images|length}}</span> posts</li>
                 <li><span class="profile-stat-count">500</span> followers</li>
                 <li><span class="profile-stat-count">14</span> following</li>
             </ul>
