--- a/gramApp/templates/app/ImgDetail.html
+++ b/gramApp/templates/app/ImgDetail.html
@@ -36,7 +36,16 @@
         </div>
     <div class="pt-5">
         <div class="reaction-wrapper">
-            <img src="{% static 'assets/like.PNG' %}" class="icon" alt="">
+            <form method="POST" action="{% url 'like' image.pk %}">
+                {% csrf_token %}
+                <input type="hidden" name="next" value="{{ request.path }}">
+               
+
+                <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                    <img src="{% static 'assets/like.PNG' %}" class="icon" alt="" type="submit">
+                    <span>{{ image.likes.all.count }}</span>
+                </button>
+            </form>
             <img src="{% static 'assets/comment.PNG' %}" class="icon" alt="">
             <img src="{% static 'assets/send.PNG' %}" class="icon" alt="">
             <img src="{% static 'assets/save.PNG' %}" class="save icon" alt="">
